<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="username">Nombre de usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="text_btn_login">Login</string>
    <string name="txt_dont_Have_acount">¿No tienes cuenta?,</string>
    <string name="txt_crea_uno_aqui">Crea uno aquí</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_pass2">Confirmar contraseña</string>
    <string name="text_btn_unete">Unete!</string>
    <string name="title_toobar">Crear usuario</string>
    <string name="usernameCardview">username</string>
    <string name="first_wordCard">Hace</string>
    <string name="timecard_txt">4 días</string>
    <string name="likenumber_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="home">Inicio</string>
    <string name="profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleimagedetail">\"Una imagen\"</string>
    <string name="lorem">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="transitionName_picture">transitionPicture</string>
    <string name="searchtext">Buscar...</string>
    <string name="tomar_foto">Tomar foto</string>
</resources>
